# infernum

./: .gitignore  .tabnineignore  CLAUDE.md  Cargo.toml  README.md  TABNINE.md  bench_comparison.sh  bench_cpu.sh  bench_cpu_comparison.sh  bench_cuda_large.sh  bench_cuda_small.sh  bench_metal.sh  bench_metal_comparison.sh  performance.md  rust-toolchain.toml  task_plan.md  update_execute_sig.py
infernum/: Cargo.toml  build.rs
infernum-cpu/: Cargo.toml
infernum-cpu/src/: execute_context.rs  executor.rs  graph_engine.rs  lib.rs  logits.rs  tensor.rs  thread_pool.rs  weights.rs
infernum-cpu/src/ops/: activation.rs  arith.rs  attention.rs  cast.rs  embed.rs  matmul.rs  mod.rs  moe.rs  norm.rs  rope.rs  tensor_ops.rs
infernum-cpu/src/simd/: avx2.rs  avx512.rs  mod.rs  neon.rs
infernum-cpu/tests/: gemma_integration.rs  llama_integration.rs  qwen_integration.rs
infernum-cpu/tests/test_helpers/: mod.rs
infernum-cuda/: Cargo.toml  build.rs
infernum-cuda/examples/: test_tokenizer.rs
infernum-cuda/kernels/: add.cu  add_rmsnorm.cu  bias_add.cu  cast.cu  causal_softmax_batched.cu  causal_softmax_offset.cu  dequantize.cu  flash_prefill_attention.cu  flash_prefill_attention_v2.cu  fp8_quantize.cu  fused_prefill_attention_with_lse.cu  gather_paged_kv.cu  gelu.cu  gemv_bf16.cu  gptq_matmul.cu  mmq_q8.cu  moe_route_sigmoid.cu  mul.cu  paged_decode_attention.cu  prefill_attention_cublas.cu  quantized_matmul.cu  rmsnorm.cu  rope_interleaved.cu  silu.cu  softmax.cu  transpose.cu
infernum-cuda/src/: lib.rs  model.rs
infernum-cuda/src/cuda/: buffer_pool.rs  mod.rs  nccl.rs  seq_position.rs
infernum-cuda/src/cuda/ops/: add.rs  gelu.rs  mla_tensor_ops.rs  mul.rs  scale.rs
infernum-cuda/src/inner/: backend_impl.rs  cuda_graph_engine.rs  cuda_logits.rs  cuda_runtime_state.rs  error.rs  execute_context.rs  executor.rs  graph_engine.rs  mod.rs  model.rs  sharded_engine.rs
infernum-cuda/src/inner/cuda/: batched_graph.rs  context.rs  graph.rs  kv_cache.rs  mod.rs  moe.rs  nccl.rs  paged_kv_cache.rs  quantized.rs  sharded.rs  (+1 more)
infernum-cuda/tests/: batching_integration.rs  deepseek_integration.rs  deepseek_unit.rs  gemma_integration.rs  llama_integration.rs  llama_unit.rs  qwen_integration.rs  tp_integration.rs
infernum-cuda/tests/test_helpers/: mod.rs
infernum-deepseek/: Cargo.toml
infernum-deepseek/src/: chat_templates.rs  config.rs  cuda_graph_engine.rs  graph_builder.rs  graph_engine.rs  lib.rs  model.rs  weights.rs
infernum-deepseek/tests/: model_integration.rs
infernum-deepseek/tests/test_helpers/: mod.rs
infernum-examples/: Cargo.toml  README.md  build.rs
infernum-examples/examples/: bench.rs  bench_cpu.rs  bench_gemv.rs  bench_metal.rs  custom_cuda_op.rs  custom_graph_op.rs  custom_triton_op.rs  generate.rs  generate_cpu.rs  generate_metal.rs  generate_parallel.rs  serve.rs  verify_parallel.rs
infernum-examples/kernels/: relu.cu  triton_gelu.py
infernum-examples/src/: lib.rs
infernum-llama/: Cargo.toml
infernum-llama/examples/: generate.rs
infernum-llama/src/: chat_templates.rs  config.rs  cuda_graph_engine.rs  cuda_model.rs  graph_builder.rs  graph_engine.rs  lib.rs  metal_graph_engine.rs  model.rs
infernum-llama/tests/: model_integration.rs
infernum-metal/: Cargo.toml  build.rs
infernum-metal/kernels/: activation.metal  add.metal  append_kv_paged.metal  argmax.metal  attention_decode.metal  attention_prefill.metal  bias.metal  cast.metal  embed.metal  fill.metal  matmul.metal  mul.metal  paged_attention.metal  paged_attention_flash.metal  quantized_matmul.metal  rmsnorm.metal  rope.metal  rope_interleaved.metal  rope_kv_append_fused.metal  scale.metal  softmax.metal  tensor_ops.metal
infernum-metal/src/: context.rs  execute_context.rs  executor.rs  graph_engine.rs  lib.rs  logits.rs  tensor.rs  weights.rs
infernum-metal/src/ops/: activation.rs  argmax.rs  arith.rs  attention.rs  bias.rs  cast.rs  data.rs  embed.rs  factory.rs  matmul.rs  matmul_ext.rs  mod.rs  moe.rs  norm.rs  rope.rs  softmax.rs  tensor_ops.rs
infernum-metal/tests/: gemma_integration.rs  llama_integration.rs  qwen_integration.rs
infernum-metal/tests/test_helpers/: mod.rs
infernum-qwen/: Cargo.toml
infernum-qwen/src/: chat_templates.rs  config.rs  cuda_graph_engine.rs  graph_builder.rs  graph_engine.rs  lib.rs  metal_graph_engine.rs  model.rs
infernum-qwen/tests/: model_integration.rs
infernum-runtime/: Cargo.toml
infernum-runtime/src/: batched_engine.rs  engine.rs  engine2.rs  lib.rs  parallel_engine.rs  parallel_runtime.rs  runtime.rs  runtime2.rs  scheduler.rs  scheduler2.rs
infernum-runtime/tests/: batching_integration.rs
infernum-serve/: Cargo.toml
infernum-serve/src/: lib.rs  server.rs  server2.rs  types.rs
infernum-serve/tests/: integration.rs
infernum/examples/: fusion_example.rs  test_tokenizer.rs
infernum/kernels/: add.cu  add_rmsnorm.cu  append_kv.cu  append_kv_paged.cu  argmax.cu  awq_matmul.cu  cast.cu  causal_softmax_offset.cu  combine_attention_lse.cu  embed.cu  fp8_quantize.cu  fused_decode_attention.cu  fused_prefill_attention.cu  gptq_matmul.cu  mla_tensor_ops.cu  mul.cu  paged_decode_attention.cu  quantized_matmul.cu  repeat_kv.cu  rmsnorm.cu  rope.cu  rope_interleaved.cu  scale.cu  silu.cu  transpose.cu
infernum/src/: backend.rs  block_allocator.rs  chat_template.rs  dtype.rs  error.rs  fusion.rs  gguf_meta.rs  lib.rs  logits.rs  model.rs  rope.rs  runtime_state.rs  sampling.rs  serde_helpers.rs  sharded.rs  tensor.rs  transformer.rs  weights.rs
infernum/src/cuda/: batched_graph.rs  buffer_pool.rs  context.rs  graph.rs  kv_cache.rs  mod.rs  moe.rs  nccl.rs  paged_kv_cache.rs  quantized.rs  seq_position.rs  shard.rs  sharded.rs  tensor.rs
infernum/src/graph/: arena.rs  builder.rs  builder_traits.rs  builtin_ops.rs  execute_context.rs  mod.rs  node.rs  op_node.rs  ops.rs  optimizer.rs  planner.rs  test_helpers.rs  weight_store.rs
infernum/src/ops/: softmax.rs
infernum/src/tokenizer/: gguf_tokenizer.rs  llama_tokenizer.rs  mod.rs
infernum/src/weights/: format.rs  gguf.rs  host.rs  loader.rs  mod.rs  safetensors.rs
(+87 files in other folders)
