[workspace]
members = [
    "infernum",
    "infernum-cpu",
    "infernum-cuda",
    "infernum-deepseek",
    "infernum-examples",
    "infernum-gemma",
    "infernum-llama",
    "infernum-macros",
    "infernum-metal",
    "infernum-qwen",
    "infernum-runtime",
    "infernum-serve",
]
resolver = "2"
[profile.release]
debug = 1
