[package]
name = "infernum-cpu"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Integration tests — downloads real models
integration = []

[dependencies]
# Core crate (tensor traits, ops, error types, weight loading)
infernum = { path = "../infernum" }

# Proc macros (define_fusion!, etc.)
infernum-macros = { path = "../infernum-macros" }

# Fusion registry
inventory = "0.3"

# Weight loading
safetensors = "0.4"
memmap2 = "0.9"

# Half-precision types
half = { version = "2.4", features = ["num-traits", "bytemuck"] }
num-traits = "0.2"
bytemuck = { version = "1.14", features = ["derive"] }

# Config parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation (for top-p sampling)
rand = "0.8"

[dev-dependencies]
approx = "0.5"
infernum-llama = { path = "../infernum-llama" }
infernum-runtime = { path = "../infernum-runtime" }
ureq = { version = "3", features = ["json"] }
