[package]
name = "infernum-deepseek"
version = "0.1.0"
edition = "2021"

[features]
default = []
cuda = ["infernum-cuda"]
nccl = ["cuda", "infernum-cuda/nccl"]
integration = ["cuda"]

[dependencies]
infernum = { path = "../infernum" }
infernum-cuda = { path = "../infernum-cuda", optional = true }
half = { version = "2.4", features = ["num-traits", "bytemuck"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
infernum-runtime = { path = "../infernum-runtime" }
ureq = { version = "3", features = ["json"] }
