[package]
name = "infernum-examples"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[features]
default = []
cuda = ["infernum/cuda", "infernum-llama/cuda", "infernum-qwen/cuda", "infernum-runtime/cuda", "cudarc"]
nccl = ["cuda", "infernum/nccl", "infernum-llama/nccl", "infernum-qwen/nccl", "infernum-runtime/nccl"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
cudarc = { version = "0.12", features = ["f16", "cuda-12060"], optional = true }
infernum = { path = "../infernum" }
infernum-llama = { path = "../infernum-llama" }
infernum-qwen = { path = "../infernum-qwen" }
infernum-runtime = { path = "../infernum-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "generate"
required-features = ["cuda"]

[[example]]
name = "generate_parallel"
required-features = ["nccl"]

[[example]]
name = "verify_parallel"
required-features = ["nccl"]

[[example]]
name = "bench"
required-features = ["cuda"]

[[example]]
name = "custom_cuda_op"
required-features = ["cuda"]

[[example]]
name = "custom_triton_op"
required-features = ["cuda"]
