[package]
name = "infernum-examples"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[features]
default = []
cuda = ["dep:cudarc", "infernum-cuda", "infernum-cuda/cuda", "infernum-serve/cuda"]
nccl = ["cuda", "infernum-cuda/nccl"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
cudarc = { version = "0.12", optional = true }
infernum = { path = "../infernum" }
infernum-cuda = { path = "../infernum-cuda", optional = true }
infernum-deepseek = { path = "../infernum-deepseek" }
infernum-gemma = { path = "../infernum-gemma" }
infernum-llama = { path = "../infernum-llama" }
infernum-qwen = { path = "../infernum-qwen" }
infernum-runtime = { path = "../infernum-runtime" }
infernum-serve = { path = "../infernum-serve" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "generate"
required-features = ["cuda"]

[[example]]
name = "generate_parallel"
required-features = ["nccl"]

[[example]]
name = "verify_parallel"
required-features = ["nccl"]

[[example]]
name = "bench"
required-features = ["cuda"]

[[example]]
name = "custom_cuda_op"
required-features = ["cuda"]

[[example]]
name = "custom_triton_op"
required-features = ["cuda"]

[[example]]
name = "serve"
required-features = ["cuda"]
