[package]
name = "infernum-llama"
version = "0.1.0"
edition = "2021"

[features]
# Enable CPU-backend weight loading utilities (load_graph_weights_safetensors).
cpu = ["dep:infernum-cpu"]
cuda = ["dep:infernum-cuda", "infernum-cuda/cuda"]
metal = ["dep:infernum-metal"]
nccl = ["cuda", "infernum-cuda/nccl"]
integration = ["cuda"]

[dependencies]
infernum = { path = "../infernum" }
infernum-cpu = { path = "../infernum-cpu", optional = true }
infernum-cuda = { path = "../infernum-cuda", optional = true }
infernum-metal = { path = "../infernum-metal", optional = true }
half = { version = "2.4", features = ["num-traits", "bytemuck"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
infernum = { path = "../infernum", features = ["test-helpers"] }
