[package]
name = "infernum-metal"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = []
# Integration tests — downloads real models
integration = []

[dependencies]
# Core crate (tensor traits, ops, error types, weight loading)
infernum = { path = "../infernum" }

# Proc macros (define_fusion!, etc.)
infernum-macros = { path = "../infernum-macros" }

# Apple Metal API bindings
metal = "0.29"
objc = "0.2"
block = "0.1"

# Half-precision types
half = { version = "2.4", features = ["num-traits", "bytemuck"] }
num-traits = "0.2"
bytemuck = { version = "1.14", features = ["derive", "extern_crate_alloc"] }

# Weight loading
safetensors = "0.4"
memmap2 = "0.9"

# Config parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation (for top-p sampling)
rand = "0.8"

# Fusion registry
inventory = "0.3"

[dev-dependencies]
approx = "0.5"
infernum-llama = { path = "../infernum-llama", features = ["metal"] }
infernum-qwen = { path = "../infernum-qwen", features = ["metal"] }
infernum-gemma = { path = "../infernum-gemma", features = ["metal"] }
infernum-runtime = { path = "../infernum-runtime" }
ureq = { version = "3", features = ["json"] }
