[package]
name = "infernum-runtime"
version = "0.1.0"
edition = "2021"

[features]
default = []
cuda = ["infernum/cuda"]
nccl = ["cuda", "infernum/nccl"]
integration = ["cuda"]

[dependencies]
infernum = { path = "../infernum" }

[dev-dependencies]
infernum-llama = { path = "../infernum-llama", features = ["cuda"] }
ureq = { version = "3", features = ["json"] }
