[package]
name = "infernum-serve"
version = "0.1.0"
edition = "2021"

[features]
default = []
cuda = ["infernum-cuda/cuda"]
nccl = ["cuda", "infernum-cuda/nccl"]

[dependencies]
infernum = { path = "../infernum" }
infernum-cuda = { path = "../infernum-cuda", optional = true }
infernum-runtime = { path = "../infernum-runtime" }

axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
infernum-cuda = { path = "../infernum-cuda" }
infernum-llama = { path = "../infernum-llama" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
