[package]
name = "infernum"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Enable CUDA support - requires CUDA toolkit installed
cuda = ["cudarc"]

[dependencies]
# CUDA bindings (optional - enable with `--features cuda`)
# When building with CUDA, set CUDA_PATH or use a specific version feature
cudarc = { version = "0.12", features = ["cublas", "cuda-12060"], optional = true }

# Weight loading
safetensors = "0.4"
memmap2 = "0.9"

# Tokenizer
tokenizers = "0.20"

# Config parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Utilities
half = { version = "2.4", features = ["num-traits", "bytemuck"] }
num-traits = "0.2"
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
approx = "0.5"
