[package]
name = "infernum"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Enable From impls for cudarc error types → infernum::Error.
# Activated automatically by infernum-cuda; keeps infernum CUDA-free by default.
cuda-errors = ["dep:cudarc", "dep:safetensors"]
# Enable From impl for NCCL errors (implies cuda-errors).
nccl-errors = ["cuda-errors", "cudarc/nccl"]
# Force fused kernels even in debug builds
force-fuse = []
# Disable fused kernels even in release builds
no-fuse = []

[dependencies]
# CUDA error types (optional — only for From impls, no GPU code)
cudarc = { version = "0.12", features = ["cublas", "cublaslt", "f16", "cuda-12060"], optional = true }
safetensors = { version = "0.4", optional = true }

# Tokenizer
tokenizers = "0.20"

# Config parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Fusion registry (distributed plugin collection across crates)
inventory = "0.3"

# Proc macros (define_block!, define_fusion!)
infernum-macros = { path = "../infernum-macros" }

# Utilities
half = { version = "2.4", features = ["num-traits", "bytemuck"] }
num-traits = "0.2"
bytemuck = { version = "1.14", features = ["derive"] }

# File format parsers (CPU-only, no GPU deps)
memmap2 = "0.9"

[dev-dependencies]
approx = "0.5"
